--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@
 
     <div class="card-body">
       <h2>₹400 / per cake</h2>
-      <p>5 Matches Per Day</p>
-      <p>10 Messages Per Day</p>
-      <p>Unlimited App Usage</p>
+       <p>Flavours your choice.</p>
+      <p>Tasty cakes</p>
+      <p>Deliver on time</p>
       <div class="d-grid">
       <button class="btn btn-lg btn-block btn-outline-dark" type="button">Sign Up</button>
       </div>
@@ -183,9 +183,9 @@
 
     <div class="card-body">
       <h2>₹800 / per cake</h2>
-      <p>Unlimited Matches</p>
-      <p>Unlimited Messages</p>
-      <p>Unlimited App Usage</p>
+      <p>Flavours your choice.</p>
+      <p>Tasty cakes</p>
+      <p>Deliver on time</p>
       <div class="d-grid">
       <button  class="btn btn-lg btn-block btn-dark" type="button">Sign Up</button>
     </div>
@@ -204,10 +204,10 @@
     <div class="card-body">
 
       <h2>₹1500 / per cake</h2>
-      <p>Pirority Listing</p>
-      <p>Unlimited Matches</p>
-      <p>Unlimited Messages</p>
-      <p>Unlimited App Usage</p>
+     
+       <p>Flavours your choice.</p>
+      <p>Tasty cakes</p>
+      <p>Deliver on time</p>
       <div class="d-grid">
       <button class="btn btn-lg btn-block btn-dark" type="button">Sign Up</button>
   </div>
